--- a/src/components/signin/signIn.css
+++ b/src/components/signin/signIn.css
@@ -19,15 +19,6 @@
     
 }
 
-@media screen and(max-width:60px) {
-    .signupCard{
-        width: 60%;
-    }
-    .insta-logo img{
-        width: 35%;
-    }
-
-}
 .imgcar{
     height:590px;
     width: 400px;
@@ -41,3 +32,17 @@
     left: 125px;
     top:61px;
 }
+
+    @media screen and (max-width: 600px) {
+        .signinCard{
+            width:80%;
+        }
+    
+    .insta-logo img{
+        width: 35%;
+    }
+        .imgcar{
+            display: none;
+        }
+}
+
